k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-go-api-demo
  labels:
    app: kubernetes-go-api-demo
spec:
  type: ClusterIP
  selector:
    app: kubernetes-go-api-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
