k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-go-api-demo
  labels:
    app: kubernetes-go-api-demo
spec:
  rules:
    - host: kubernetes-go-api-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-go-api-demo
                port:
                  number: 80
